nohup.out
  File "bug_report.py", line 83
    wihile 1:
           ^
SyntaxError: invalid syntax
[master 3d5f7f4] 2016-12-09 18:45:00
 7 files changed, 1690 insertions(+), 7 deletions(-)
 create mode 100644 apkData/9054b1cc620dff012f610b9d0e664438.log
 create mode 100644 apkData/9054b1cc620dff012f610b9d0e664438.xml
 create mode 100644 nohup.out
To github.com:youngsheldon/hn_data.git
   8c5f61a..3d5f7f4  master -> master
